--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ opacity: 0.3;
     font-size: 1.5rem;
     font-weight: 300;
     margin-bottom: 1rem;
-   
+
   }
 
   #tasks .task {
@@ -185,6 +185,9 @@ h2 {
     font-weight: 250;
     text-transform: uppercase;
     transition: 0.4s;
+    display: flex;
+    flex-wrap: wrap;
+
   }
   
   main {
@@ -195,4 +198,20 @@ h2 {
 
   }
 
+  .task .actions {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -0.5rem;
+  }
+
+  #tasks .task {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+   
+  }
 }
